fixed lazy load bug when loading placeholder, that loaded a stretched image. Also fixed added padding on skills section, and removed phone and email inputs. Only email inputs accepted. Increased height of contact form inputs

--- a/public/_variables.scss
+++ b/public/_variables.scss
@@ -52,6 +52,8 @@ $navbar-height: 3.3em;
   .lazy-load-image-background {
     width: 100%;
     height: 100%;
+    background-size: cover;
+    background-position: center;
     flex: 1;
   }
   img {
