--- a/src/pages/homePage/components/contactBanner/_contactMeBannerBreakpoints.scss
+++ b/src/pages/homePage/components/contactBanner/_contactMeBannerBreakpoints.scss
@@ -29,6 +29,9 @@ $unitless-size: c.$unitless-size;
       padding: calc(#{$font-size} * 0.22 / 2) calc(#{$font-size} * 0.22 / 1.9);
       margin-top: calc((#{$font-size} / 2.2) / 1.5);
     }
+    input{
+      padding: calc(#{$font-size} * 0.38 / 2) calc(#{$font-size} * 0.22 / 1.9);
+    }
   }
 
   .#{$namespace}-contact-form-input {
@@ -36,7 +39,7 @@ $unitless-size: c.$unitless-size;
     font-size: calc(#{$font-size} * 0.22);
     .#{$namespace}-contact-form-input-email {
       font-size: calc(#{$font-size} * 0.22);
-      padding: calc(#{$font-size} * 0.22 / 2) calc(#{$font-size} * 0.22 / 1.9);
+      padding: calc(#{$font-size} * 0.38 / 2) calc(#{$font-size} * 0.22 / 1.9);
     }
     .phone-input-container {
       font-size: calc(#{$font-size} * 0.22);
@@ -77,7 +80,7 @@ $unitless-size: c.$unitless-size;
     width: $circle-width * 1.3;
   }
   ##{$namespace}-social-media {
-    width: ($circle-width * 1.3) - 8%;
+    width: calc((#{$circle-width} * 1.6) - 8%);
   }
   ##{$namespace}-message {
     width: 100%;
@@ -85,7 +88,7 @@ $unitless-size: c.$unitless-size;
     padding-top: 8%;
   }
   ##{$namespace}-message-inner {
-    width: 70%;
+    width: 80%;
   }
   @include contact-me-spacing($unitless-size * 2);
 }
@@ -97,7 +100,7 @@ $unitless-size: c.$unitless-size;
     width: 80%;
   }
     ##{$namespace}-message-inner {
-    width: 80%;
+    width:90%;
   }
   @include contact-me-spacing($unitless-size * 2.5);
 }
