--- a/src/pages/homePage/components/skillsBanner/_skillsBannerBreakpoints.scss
+++ b/src/pages/homePage/components/skillsBanner/_skillsBannerBreakpoints.scss
@@ -71,7 +71,6 @@ $namespace: s.$namespace;
   .#{$namespace}-text-content {
     padding-right: 0;
     width: 100%;
-    padding-bottom: 20%;
   }
   .#{$namespace}-skills-list-inner {
     $width: min(5vw, 4em);
